more styling and fixed a bug for 2-up layout by implementing a -webkit-line-clamp to handle the text overflow that was pushing the cards out of alignment

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,5 +1,10 @@
 .card {
   height: auto;
+  transition: transform 200ms ease-in;
+}
+
+.card:hover {
+  transform: scale(1.01);
 }
 
 .cardText {
@@ -19,6 +24,10 @@
 
 .cardDescription {
   padding-bottom: 8px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 
 .cardButton {
@@ -35,16 +44,6 @@
   object-fit: contain;
   border-radius: 12px 12px 0px 0px;
 }
-
-/* .content > img:hover {
-  background-color: #000;
-  opacity: 0.7;
-  transition: ease-in-out 0.2s;
-} */
-
-/* .overlay {
-  visibility: hidden;
-} */
 
 .cardText {
   display: none;
