--- a/src/pages/Portfolio.css
+++ b/src/pages/Portfolio.css
@@ -19,7 +19,7 @@
   -webkit-column-width: 33%;
   column-width: 33%;
   /* padding: 0 12px; */
-  margin: 12px;
+  margin: 0px 12px 0px 12px;
 }
 
 @media (max-width: 768px) {
